2008-06-30  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/Makefile.in: Remove the -I flag for exmpp includes; the
	-include_lib pragma is a better solution.

	* src/ejabberd_c2s.erl, src/ejabberd_s2s_in.erl,
	src/ejabberd_s2s_out.erl: Use -include_lib instead of -include to
	include exmpp.hrl.

	* src/ejabberd_s2s.erl: Convert to exmpp.

2008-06-27  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_c2s.erl, src/ejabberd_s2s_out.erl,
	src/ejabberd_s2s_in.erl: Use the new exmpp namespace macro names.
	Update send_element/2 to use exmpp new to_list functions.

2008-06-26  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_c2s.erl: Use a macro in ?DEFAULT_NS instead of the
	namespace atom directly. Comment DBGFSM our again. Remove macro
	ERR_SERVICE_UNAVAILABLE.
	(wait_for_auth, is_auth_packet): An empty resource is returned as
	'undefined', not the empty string in the {auth, ...} tuple.
	(handle_sync_event): Remove a debugging printf.
	(handle_info/{route, ...}): Use macro IS_PRESENCE & friends instead of
	direct matching with NS_JABBER_CLIENT and name. This way, the S2S
	doesn't have to change the namespace of all its incoming stanzas to
	NS_JABBER_CLIENT.
	(send_element): For stanzas under the NS_JABBER_SERVER namespace, lie
	to exmpp_xml by telling it that this namespace is the default one.

	* src/ejabberd_s2s_in.erl, src/ejabberd_s2s_out.erl: Convert to exmpp.

2008-06-25  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_c2s.erl: Finish ejabberd_c2s conversion with the
	functions related to offline stanzas.

	* src/ejabberd_c2s.erl (get_subscribed_and_online): Fix short JID
	comparison; it was using 'undefined' instead of empty strings.

2008-06-24  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_c2s.erl: The handle_info clause that treats routing
	order is now converted. In-memory sets and dict still use the short